--- a/style.css
+++ b/style.css
@@ -80,6 +80,10 @@ html, body {
   margin: 0 0 15px 0;
 }
 
+#back-to-top {
+  display: none;
+}
+
 @media (max-width: 600px) {
   #navbar {
     all: unset;
@@ -96,5 +100,14 @@ html, body {
 
   .first-main-section {
     margin-top: 50px;
+  }
+
+  #back-to-top {
+    all: unset;
+    position: fixed;
+    width: 50px;
+    bottom: 0;
+    right: 0;
+    margin: 0 20px 20px 0;
   }
 }
